# home-security

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
data/: oui.csv
home_security/: __init__.py  _proc.py  cli.py  device.py  inventory.py  net.py  ports.py  scanner.py  vendor.py
tests/: test_device.py  test_inventory.py  test_proc.py  test_smoke.py  test_vendor.py
