[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "home-security"
version = "0.1.0"
description = "Audit your own home network: discover devices, identify vendors, diff against a baseline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.scripts]
home-security = "home_security.cli:main"

[tool.setuptools.packages.find]
include = ["home_security*"]
